Correct z-index of 'more button' on drawing view

--- a/src/components/draw/style/draw.less
+++ b/src/components/draw/style/draw.less
@@ -27,6 +27,10 @@
     width: auto;
   }
 
+  ul.dropdown-menu {
+    z-index: 1500;
+  }
+
   .ga-draw-info-save {
     color: lightgray;
     margin-left: 30px;
